--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -10,4 +10,6 @@ sphinx:
    configuration: docs/conf.py
 python:
    install:
+   - method: pip
+     path: .
    - requirements: docs/requirements.txt
