--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,6 +1,4 @@
-# Read the Docs configuration file
-# https://docs.readthedocs.io/en/stable/config-file/v2.html
-
+# Update jaxio.readthedocs.io page with the latest version in pypi.
 version: 2
 build:
   os: ubuntu-22.04
@@ -10,6 +8,4 @@ sphinx:
    configuration: docs/conf.py
 python:
    install:
-   - method: pip
-     path: .
    - requirements: docs/requirements.txt
